syntax = "proto3";

option csharp_namespace = "grpcReportClient";

package reports;

service Report {

  rpc SendReport(stream ReportRequest) returns (ReportResponse);  
}

message ReportRequest {
  string name = 1;
  string description=2;
  string report_type = 3;
}

message ReportResponse {
  string message = 1;
}
